# massive-terminal

./: .gitmodules  Cargo.toml  LICENSE  README.md  justfile  massive-terminal.code-workspace
.github/instructions/: copilot.instructions.md
.github/workflows/: qa.yaml
src/: geometry.rs  input.rs  logical_line.rs  main.rs  panel.rs  range_ops.rs  range_tools.rs  scroll_matrices.rs  selection.rs  terminal_font.rs  terminal_geometry.rs  terminal_scroller.rs  terminal_state.rs  view_geometry.rs  view_state.rs  window_geometry.rs  window_state.rs
src/input/: mod.rs  termwiz.rs
src/terminal/: cursor.rs  font.rs  geometry.rs  logical_line.rs  mod.rs  presenter.rs  screen.rs  screen_geometry.rs  scroll_locations.rs  scroller.rs  selection.rs  state.rs  view.rs  view_geometry.rs
